SPEAKEASY-92: Fix default screenshots not showing up for zip extensions
* Remove zebra stripe colouring for now
* Get rid of hr in more menu as it looks horrible in confluence

--- a/src/main/resources/packages/user/speakeasy/user/user.css
+++ b/src/main/resources/packages/user/speakeasy/user/user.css
@@ -34,7 +34,7 @@
 }
 
 #plugins-table tr.zebra {
-    background-color: #EAEAE9;
+    /*background-color: #EAEAE9;*/
 }
 
 #plugins-table tr.enabled {
